--- a/style.css
+++ b/style.css
@@ -35,15 +35,15 @@ td{
 }
 
 #rock{
-    background-image: url("/images/rock.jpeg");
+    background-image: url("images/rock.jpeg");
 }
 
 #paper{
-background-image: url("/images/paper.jpeg");
+background-image: url("images/paper.jpeg");
 }
 
 #scissors{
-background-image: url("/images/scissors.png")
+background-image: url("images/scissors.png")
 }
 .container button{
     height: 100px;
